--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Airbnb</title>
   </head>
-  <body style="margin:0; padding:0;">
-    <header style="background-color:#FF0000; height:70px; width:100%;"></header>
-    <footer style="background-color:#00FF00; height:60px; width:100%; position:absolute; bottom:0; text-align:center; line-height:60px;">
+  <body style="margin: 0; padding: 0">
+    <header
+      style="background-color: #ff0000; height: 70px; width: 100%"
+    ></header>
+    <footer
+      style="
+        background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+        line-height: 60px;
+      "
+    >
       Best School
     </footer>
   </body>
